--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "@types/jest": "27.0.1",
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@types/react-scroll": "^1.8.10",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
@@ -48,8 +52,10 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.236",
     "react-refresh": "0.11.0",
     "react-router-dom": "^6.24.0",
+    "react-scroll": "^1.9.0",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.3.0",
@@ -60,6 +66,7 @@
     "tailwindcss": "3.0.2",
     "terser-webpack-plugin": "5.2.5",
     "typescript": "4.4.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "2.1.0",
     "webpack": "5.64.4",
     "webpack-dev-server": "4.6.0",
